# pulse

./: .gitattributes  .gitignore  .gitmodules  .lfsconfig  .prettierignore  .prettierrc.json  LICENSE  README.md  URL_SCHEME_TESTING.md  VIDEO_STABILIZATION.md  WHISPER_INTEGRATION.md  app.json  babel.config.js  eas.json  eslint.config.js  jest.config.js  metro.config.js  package-lock.json  package.json  tsconfig.json
.copilot/: instructions.md
__tests__/: retiming.test.ts  transcription.test.ts
android/: settings.gradle
android/app/src/main/cpp/: CMakeLists.txt  hello_jni_android.cpp
app/: _layout.tsx  camera.tsx  index.tsx  onboarding.tsx  preview.tsx  upload.tsx
components/: AutoEditToggle.tsx  CameraControls.tsx  CloseButton.tsx  ParallaxScrollView.tsx  PermissionMonitor.tsx  RecordButton.tsx  RecordingProgressBar.tsx  RedoSegmentButton.tsx  ThemedText.tsx  TimeSelectorButton.tsx  TranscriptEditor.tsx  TranscriptView.tsx  URLHandler.tsx  UndoSegmentButton.tsx  UploadCloseButton.tsx  VideoStabilizationControl.tsx  WhisperButton.tsx
constants/: Colors.ts  camera.ts
demo/: AutoEditDemo.tsx  ui-demo.html
docs/: android-parity.md  app-size-research.md  implementation-status.md  media-builds.md  pulse-feature-gaps.md  pulse-new-plan.md  pulse-original-features.md  rnvt-fork-and-release.md
drizzle/: 0000_rainy_hex.sql  0001_gifted_quentin_quire.sql  0002_mature_mephistopheles.sql  0003_fair_baron_zemo.sql  0004_certain_prism.sql  0005_abandoned_blue_marvel.sql  0006_glossy_king_cobra.sql  0007_clear_doctor_faustus.sql  0008_spooky_sentinels.sql  0009_merged_transcripts.sql  0010_lumpy_captain_stacy.sql  migrations.js
fixtures/: bbb_master.mov
hooks/: useAutoEdit.ts  useDraftManager.ts  useFirstTimeOpen.ts  useTranscription.ts  useVideoProcessor.ts
patches/: react-native-sortables+1.9.4.patch  (+1 more)
scripts/: test_ios.sh  (+9 more)
(+236 files in other folders)
